# ChipBot

./: .gitignore  CLAUDE.md  README.md  db.py  keep_alive.py  keys.env.example  linux.py  main.py  main.py.save  main.py.save.1  pyproject.toml  railpack.json  start.sh  time.py  webapp.py
docs/: index.html  privacy.html  tos.html
templates/: admin.html  base.html  index.html  server.html  upgrade.html
tests/: test_db.py  test_e2e.py  test_keep_alive.py  test_logit.py  test_safe_sound_path.py  test_webapp.py
