[tool.poetry]
name = "chipbot"
version = "0.2.0"
description = "Discord soundboard bot — play custom .mp3 clips in voice channels"
authors = ["Olav van Rabenswaaij <Olav.van.rabenswaaij@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = "^2.3.2"
flask = "^3.0.0"
PyNaCl = "^1.5.0"
pytz = "^2024.1"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
matplotlib = "^3.8.0"
Werkzeug = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry>=1.5"]
build-backend = "poetry.core.masonry.api"
